--- a/style.css
+++ b/style.css
@@ -32,3 +32,11 @@ ul li {
 footer {
     text-align: center;
 }
+
+#cheshireCat {
+    text-align: center;
+}
+
+#sketchHolder {
+    cursor: pointer;    
+}
